--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Assignment-2</title>
+	<style>
+		*{
+			box-sizing: border-box;
+			margin: 0;
+			padding: 0;
+		}
+		h1{
+			text-align: center;
+			padding-top: 20px;
+			padding-bottom: 40px
+		}
+		div{
+			background-color: grey;
+			border: 2px solid black;
+			width: 33.333333%;
+			float:left;		
+		}
+		p{
+			padding: 10px;
+		}
+		h3{
+			text-align: center;
+			padding-right: 20px;
+			display: inline;
+			border: 1px solid black;
+
+		}
+		.pink{
+			background-color: pink;
+			margin-left: 335px;
+		}
+		.red{
+			background-color: red;
+			margin-left: 366px;
+		}
+		.yellow{
+			background-color: yellow;
+			margin-left: 358px;
+		}
+		 
+	</style>
+		
+		
 </head>
 <body>
 <h1>Our Menu</h1>
+<div class="div1">
+	<h3 class="pink">Chicken</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
+</div>
+<div class="div2">
+	<h3 class="red">Beef</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="div3">
+	<h3 class="yellow">Sushi</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
 </body>
 </html>
